--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
-<div>
+<!-- <div>
     <h1>Hotel Management Client</h1>
     <h2>hello</h2>
     
 
+</div> -->
+
+<!-- <app-header title="Book's Web Client"></app-header> -->
+
+<div class="main-content">
+    <router-outlet></router-outlet>
 </div>
+
+<!-- <app-footer></app-footer> -->
