--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+.ng-dirty.ng-invalid:not(form)
+{
+    border-right: 5px solid red;
+}
+.ng-valid:not(form){
+    border-right: 5px solid green;
+}
+i{
+    margin-right: 3px;
+}
