--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div>
-    <h1>Hotel Management Client</h1>
-    <h2>hello</h2>
-    
+<header title="Awesome"></header>
 
+<div class="main-content">
+    <router-outlet></router-outlet>
 </div>
+
+<footer></footer>
