home page added

--- a/src/app/modules/core/components/home/home.component.html
+++ b/src/app/modules/core/components/home/home.component.html
@@ -1,1 +1,32 @@
-<p>home works!</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <!-- <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol> -->
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="1000">
+        <img class="d-block w-100" src="https://images.hindustantimes.com/rf/image_size_960x540/HT/p2/2018/12/15/Pictures/_9f2b6346-ffd3-11e8-9457-b1b429387a4e.jpg" alt="First slide">
+        <div class="carousel-caption ">
+            <h5>HOTEL</h5>
+            <p>Something</p>
+          </div> 
+    </div>
+      <div class="carousel-item" data-bs-interval="1000">
+        <img class="d-block w-100" src="https://i1.wp.com/yourmileagemayvary.net/wp-content/uploads/2018/04/hotel-indigo-sarasota-2533026684-2x1.jpeg?fit=1200%2C600&ssl=1">
+        <div class="carousel-caption ">
+            <h5>HOTEL</h5>
+            <p>Something</p>
+          </div> 
+    </div>
+      <div class="carousel-item" data-bs-interval="1000"> 
+        <img class="d-block w-100" src="https://media2.radiogutscheine.de/shop4/media/files2/102616-912-456-0-FFFFFF-c.jpg">
+        <div class="carousel-caption ">
+            <h5>HOTEL</h5>
+            <p>Something</p>
+          </div> 
+    </div>
+    </div>
+   
+  </div>
+ 
