--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 </div> -->
 
-<!-- <app-header title="Book's Web Client"></app-header> -->
+<header title="Awesome Hotel"></header>
 
 <div class="main-content">
     <router-outlet></router-outlet>
