--- a/src/app/modules/core/components/home/home.component.html
+++ b/src/app/modules/core/components/home/home.component.html
@@ -16,7 +16,7 @@
         <img class="d-block w-100" src="https://i1.wp.com/yourmileagemayvary.net/wp-content/uploads/2018/04/hotel-indigo-sarasota-2533026684-2x1.jpeg?fit=1200%2C600&ssl=1">
         <div class="carousel-caption ">
             <h5>HOTEL</h5>
-            <p>Something</p>
+            <p>Something tells about the hotel</p>
           </div> 
     </div>
       <div class="carousel-item" data-bs-interval="1000"> 
