--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header title="Awesome"></header>
+<header title="Awesome Hotel"></header>
 
 <div class="main-content">
     <router-outlet></router-outlet>
