--- a/src/app/modules/core/components/header/header.component.html
+++ b/src/app/modules/core/components/header/header.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"  aria-current="page"><i class="fa-solid fa-list"></i>Rooms</a>
+            <a class="nav-link" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" [routerLink]='["/booking/gallery"]' aria-current="page"><i class="fa-solid fa-list"></i>Rooms</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"  ><i class="fa-solid fa-plus"></i> Gallery</a>
