--- a/src/app/modules/core/components/header/header.component.html
+++ b/src/app/modules/core/components/header/header.component.html
@@ -8,7 +8,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           
           <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"  ><i class="fa-solid fa-plus"></i> Gallery</a>
+            <a class="nav-link" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" [routerLink]='["booking/gallery"]' ><i class="fa-solid fa-plus"></i> Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"  aria-current="page" ><i class="fa-solid fa-list"></i>Booking's</a>
@@ -16,7 +16,7 @@
           
         </ul>
         
-        <membership></membership> 
+        <membership class="px-4"></membership> 
         
       </div>
    
