--- a/src/app/modules/booking/components/gallery/gallery.component.html
+++ b/src/app/modules/booking/components/gallery/gallery.component.html
@@ -13,6 +13,7 @@
         alt="Wintry Mountain Landscape"
       />
     </div>
+    
   
     <div class="col-lg-4 mb-4 mb-lg-0">
       <img
@@ -22,8 +23,8 @@
       />
   
       <img
-        src=""
-        class="https://tse4.mm.bing.net/th/id/OIP.30OjcsgtLFE8mrv8MQipzAHaEm?pid=ImgDet&w=900&h=560&rs=1"
+        src="https://i.pinimg.com/originals/2d/17/b8/2d17b8e82a1b90773a5e0b18290bcf01.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
         alt="Boat on Calm Water"
       />
     </div>
